--- a/index.html
+++ b/index.html
@@ -15,11 +15,50 @@
         <h1><span class="sec-name-highlight">Avishek Majumder</span></h1>
         <p>A full stack allaround designer that placerat
         <br>in massa consectetur<br></p>
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/in/avishek-majumder-484706203/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/first photo.png" alt="">
         </div>
-        
+    </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/second photo.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2><span class="th-name-highlight">ABOUT</span></h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/avishek-majumder-484706203/">DOWNLOAD CV</a>
+        </div>
+    </section>
+    <section>
+        <h2 class="bg-center"><span class="fif-name-highlight">LATEST</span><span class="six-name-highlight">WORKING PROJECT</span></h2>
+        <div class="low-width">
+            <img src="images/image 4.png" alt="">
+            <h3><span class="fou-name-highlight">Power-x-gym (gym website)</span></h3>
+            <p>Lorem Ipsum is simply dummy text of the 
+                printing and typesetting industry.
+            </p>
+        </div>
+        <div class="low-width">
+            <img src="images/image 5.png" alt="">
+            <h3><span class="fou-name-highlight">Creative Agency</span></h3>
+            <p>Lorem Ipsum is simply dummy text of the 
+                printing and typesetting industry.
+            </p>
+        </div>
+        <div class="low-width">
+            <img src="images/image 8.png" alt="">
+            <h3><span class="fou-name-highlight">Hard Rock Music</span></h3>
+            <p>Lorem Ipsum is simply dummy text of the 
+                printing and typesetting industry.
+            </p>
+        </div>
+    </section>
+    <section>
+        <div>
+            <h1>WORK INQUIRY <a class="link-button" target="_blank" href="https://www.facebook.com/immortal.aj.9/">Lets Chat</a></h1>
+        </div>
     </section>
 </body>
 </html>
