--- a/index.html
+++ b/index.html
@@ -55,10 +55,14 @@
             </p>
         </div>
     </section>
-    <section>
-        <div>
-            <h1>WORK INQUIRY <a class="link-button" target="_blank" href="https://www.facebook.com/immortal.aj.9/">Lets Chat</a></h1>
+    <section style="background-image: url(images/Group_33094_1.png);background-size: 900px; background-repeat: no-repeat; background-position: center; height: 300px;">
+        <div style="float: left; padding-top: 80px; padding-left: 350px;">
+            <h1 id="solidHT5">WORK INQUIRY</h1>
+        </div>
+        <div style="float: right; padding-top: 140px; padding-right: 350px;">
+            <a style="text-decoration: none; background-color:aqua; padding: 10px 20px; border-radius: 5px; color: white; font-weight: 400;" href="https://www.facebook.com/immortal.aj.9" target="_blank" class="chat-Button">Let's Chat</a>
         </div>
     </section>
 </body>
+<footer>All Rights Reserved By Avishek Majumder Arnab</footer>
 </html>
