--- a/index.html
+++ b/index.html
@@ -63,6 +63,24 @@
             <a style="text-decoration: none; background-color:aqua; padding: 10px 20px; border-radius: 5px; color: white; font-weight: 400;" href="https://www.facebook.com/immortal.aj.9" target="_blank" class="chat-Button">Let's Chat</a>
         </div>
     </section>
+    <div class="content">
+        <h1>5 Stars Rate</h1>
+        <span><i class="fa fa-star"></i></span>
+        <p>Pure CSS!</p>
+      </div>
+      
+      <div class="wrapper">
+        <input name="ratingRadio" type="radio" id="st1" value="1" />
+        <label for="st1"></label>
+        <input name="ratingRadio" type="radio" id="st2" value="2" />
+        <label for="st2"></label>
+        <input name="ratingRadio" type="radio" id="st3" value="3" />
+        <label for="st3"></label>
+        <input name="ratingRadio" type="radio" id="st4" value="4" />
+        <label for="st4"></label>
+        <input name="ratingRadio" type="radio" id="st5" value="5" />
+        <label for="st5"></label>
+      </div>
 </body>
-<footer>All Rights Reserved By Avishek Majumder Arnab</footer>
+<footer style="text-align: center; color: purple;">All Rights Reserved By Avishek Majumder Arnab</footer>
 </html>
